--- a/style.css
+++ b/style.css
@@ -1,10 +1,3 @@
-#equation-box{
-    width: 100%;
-    padding: 12px 20px;
-    margin: 8px 0;
-    box-sizing: border-box;
-}
-
 .matrix {
     height: 150px;
     font: monospace;
@@ -39,7 +32,7 @@ button {
 }
 
 #button2{
-    background: #6d74ca;
+    background: hsl(4, 47%, 61%);
 }
 
 button:hover:enabled {
@@ -48,6 +41,7 @@ button:hover:enabled {
 }
 
 body{
+    zoom: 1.5;
     height: 99%;
     margin: 0;
     background-color: #171b5a;
@@ -57,6 +51,7 @@ body{
     display: grid;
     place-items: center;
     font-family: sans-serif;
+    font-weight: bold;
 }
 
 div{
@@ -64,11 +59,10 @@ div{
 }
 
 .main{
-    color: #171b5a;
-    background: rgba(255, 255, 255, 0.15);
-    box-shadow: 0 8px 32px 0 rgb(31 38 135 / 37%);
-    backdrop-filter: blur(6px);
-    font-family: sans-serif;
+    color: #242424d0;
+    background: rgba(112, 112, 112, 0.068);
+    box-shadow: 0 8px 32px 0 rgba(46, 49, 80, 0.404);
+    backdrop-filter: blur(8px);
     padding: 15px;
     max-width: 600px;
     word-wrap: break-word;
