--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ body{
     height: 99%;
     margin: 0;
     background-color: #171b5a;
-    background-image: url(background.jpg);
+    background-image: url(background1.jpg);
     background-attachment: fixed;
     background-size: cover;
     display: grid;
